# SSCpol

./: .gitignore  3C279.txt  Bessel.py  DZones.py  Doppler_depolariser.py  EVPARotator.py  Example.ipynb  FG.txt  LICENSE  MANIFEST.in  MKN421.txt  MKN501.txt  PolPlotter.py  README.md  Tony_Data  Zone_Viz.py  automateSED.py  fit.py  fitter.py  func_model.c  func_model.h  jet_fns.c  jet_fns.h  jet_fns.py  jet_model.c  jet_synconlyALPWFlux.c  junk.py  nrutil.c  nrutil.h  plot_results.ipynb  process_syncALP.py  requirements.txt  runplotSED.py  setup.cfg  setup.py  submit.sh
data/: CGRaBSJ02111051-builder.txt  CGRaBSJ02111051-builderX.txt  S50716714.txt  S50716714_2.txt  S5flare.txt  S5low.txt  for_fit_J0211+1051.txt  for_fit_TXS0506+056.txt  new_data_sed_CGRaBSJ0211+1051.txt  new_data_sed_CGRaBSJ0211+1051_XMM.txt  to_fit_SED_txs0506+056.txt  tofit_flare_0716+016.txt  tofit_historical_0716+016.txt  txs.txt  txs_xray_data.txt
include/: func_model.h  jet_fns.h  jet_fns.h.gch  mtwister.h.gch
notebooks/: Analyze.ipynb  Example.ipynb  example.ipynb  plot.mplstyle  plot_results.ipynb
src/: IC_playground.c  Makefile  full_model.c  func_model.c  jet_fns.c  jet_fns.h  jet_model.c
sscpol/: Doppler_depolariser.py  Zone_Viz.py  __init__.py  fit.py  fitter.py  jet_fns.py
tests/: test_fitter.py  test_jet_fns.py
utils/: EllipseFit.py  ICplotter.py  Miscellaneous.py  PolPlotter.py  SEDplotter.py  automateSED.py  jet_fns.py  junk.py  process_syncALP.py  runfile.py
workdir/: IC_Z0.5.txt  IC_Z1.3.txt  IC_Z1.5.txt  IC_Z1.6.txt  IC_Z2.0.txt  IC_Z4.0.txt  IC_Z5.5.txt  S_Z0.5.txt  (+59 more)
(+69 files in other folders)
