[metadata]
name = sscpol
description = Python + C codebase to calculate the observed steady-state SED and polarization of a relativistic conical jet of electrons & positrons.
long_description = file: README.md
long_description_content_type='text/markdown'
author = Abel Lawrence Peirson  
author_email = 59vpla@gmail.com
url = https://github.com/alpv95/SSCpol
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=3.2
    pyswarms
    scipydirect
    scipy
    multiprocess
    matplotlib

[options.extras_require]
test =
    pytest